log
Thu 28 Mar 2024 02:13:47 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
8f0942d
Thu 28 Mar 2024 02:16:43 PM UTC: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c:40:6: error: expected identifier or ‘(’ before ‘return’
   40 |      return NULL;
      |      ^~~~~~
list.c:41:1: error: expected identifier or ‘(’ before ‘}’ token
   41 | }
      | ^
Compilation failed
d9d6465
Thu 28 Mar 2024 02:16:53 PM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  1|5
total_score: 10/70
3054496
Thu 28 Mar 2024 02:23:23 PM UTC: 
 list.c | 15 +++++++--------
 1 file changed, 7 insertions(+), 8 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f49fd12
Thu 28 Mar 2024 02:26:32 PM UTC: 
 list.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
82954e8
Thu 28 Mar 2024 02:28:27 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  2|5
total_score: 15/70
ac8b121
Thu 28 Mar 2024 02:45:09 PM UTC: 
 list.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
04ec106
Thu 28 Mar 2024 02:45:47 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:19: error: expected expression before ‘=’ token
   42 |   if(list->head !== NULL)
      |                   ^
list.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2a0f864
Thu 28 Mar 2024 02:45:55 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:17: error: comparison between pointer and integer [-Werror]
   42 |   if(list->head ==! NULL)
      |                 ^~
cc1: all warnings being treated as errors
Compilation failed
6cdcc7b
Thu 28 Mar 2024 02:46:07 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:17: error: assignment to ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   42 |   if(list->head =! NULL)
      |                 ^
list.c:42:6: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   42 |   if(list->head =! NULL)
      |      ^~~~
cc1: all warnings being treated as errors
Compilation failed
9c2b72f
Thu 28 Mar 2024 02:46:19 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
79cdcfc
Thu 28 Mar 2024 02:47:34 PM UTC: 
 list.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
d9f2050
Thu 28 Mar 2024 02:48:42 PM UTC: 
 list.c | 4 ----
 1 file changed, 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:66:1: error: control reaches end of non-void function [-Werror=return-type]
   66 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
bbdb804
Thu 28 Mar 2024 02:49:20 PM UTC: 
 list.c | 8 --------
 1 file changed, 8 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
   43 | }
      | ^
list.c: In function ‘nextList’:
list.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9d03f72
Thu 28 Mar 2024 02:55:53 PM UTC: 
 list.c | 15 +++++++++++----
 1 file changed, 11 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
list.c: In function ‘nextList’:
list.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
   62 | }
      | ^
list.c: In function ‘lastList’:
list.c:67:1: error: control reaches end of non-void function [-Werror=return-type]
   67 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c0cb5bf
Thu 28 Mar 2024 02:56:26 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
   62 | }
      | ^
list.c: In function ‘lastList’:
list.c:67:1: error: control reaches end of non-void function [-Werror=return-type]
   67 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8481472
Thu 28 Mar 2024 02:56:35 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:61:1: error: control reaches end of non-void function [-Werror=return-type]
   61 | }
      | ^
list.c: In function ‘lastList’:
list.c:66:1: error: control reaches end of non-void function [-Werror=return-type]
   66 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
80f4e4f
Thu 28 Mar 2024 02:57:16 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
   62 | }
      | ^
list.c: In function ‘lastList’:
list.c:67:1: error: control reaches end of non-void function [-Werror=return-type]
   67 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5217468
Thu 28 Mar 2024 02:57:45 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
   62 | }
      | ^
list.c: In function ‘lastList’:
list.c:67:1: error: control reaches end of non-void function [-Werror=return-type]
   67 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e933526
Thu 28 Mar 2024 03:00:49 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
   62 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
37e8627
Thu 28 Mar 2024 03:03:11 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
   62 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
feb542a
Thu 28 Mar 2024 03:05:26 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
   62 | }
      | ^
list.c: In function ‘prevList’:
list.c:85:1: error: control reaches end of non-void function [-Werror=return-type]
   85 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2393ae5
Thu 28 Mar 2024 03:06:19 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
   62 | }
      | ^
list.c: In function ‘prevList’:
list.c:85:1: error: control reaches end of non-void function [-Werror=return-type]
   85 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
49b773f
Thu 28 Mar 2024 03:07:00 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
   62 | }
      | ^
list.c: In function ‘prevList’:
list.c:85:1: error: control reaches end of non-void function [-Werror=return-type]
   85 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
bc6ef0a
Thu 28 Mar 2024 03:07:41 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
   62 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c6b7cd9
Thu 28 Mar 2024 03:09:51 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
   62 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
bce1980
